be.yaml
# k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lcasystem-backend
  labels:
    app: lcasystem-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lcasystem-backend
  template:
    metadata:
      labels:
        app: lcasystem-backend
    spec:
      containers:
        - name: lcasystem-backend
          image: ghcr.io/tpspace/thesis-be:latest
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 20
