deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: my-thesis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/tpspace/thesis-be:latest
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: "2000m" # Increased to 1 vCPU
              memory: "2048Mi" # Increased to 1 GB
            requests:
              cpu: "1000m" # Increased to 0.5 vCPUs
              memory: "1024Mi" # Increased to 512 MB
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 20
      imagePullSecrets:
        - name: ghcr-secret
