deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/tpspace/thesis-fe:latest
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ghcr-secret
