service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: my-thesis
spec:
  selector:
    app: backend
  ports:
    - port: 4000
