service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: my-thesis
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
  clusterIP: None
