static-assets-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-assets-ingress
  namespace: my-thesis
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Cookie"
spec:
  rules:
    - http:
        paths:
          - path: /icons
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /favicon
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /_next
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /manifest.json
            pathType: Exact
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /robots.txt
            pathType: Exact
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /config.js
            pathType: Exact
            backend:
              service:
                name: frontend
                port:
                  number: 80
